# Robustone

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  README_CN.md  docker-compose.yml  justfile  pr-description.md  pyproject.toml  renovate.json  requirements.txt  test_riscv32_simple.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
docs/: benchmark-baselines.md  capstone-v6.0.0-features.md  coding-guidelines-cn.md  coding-guidelines.md  isa-checklist.md  public-contract.md  refactor-tracker.md  release-checklist.md  roadmap.md  support-matrix.md  versioning-policy.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli_argument_combinations.rs  decode_riscv.rs  format_riscv_json.rs  format_riscv_text.rs  hex_parser.rs
robustone/: Cargo.toml
robustone-arm/: Cargo.toml
robustone-arm/src/: decoder.rs  (+4 more)
robustone-cli/: Cargo.toml
robustone-cli/benches/: cli_end_to_end.rs
robustone-cli/src/: arch.rs  capabilities.rs  command.rs  config.rs  disasm.rs  error.rs  executor.rs  lib.rs  tests.rs  version_info.rs
robustone-cli/src/utils/: check.rs  mod.rs  parse.rs
robustone-core/: Cargo.toml
robustone-loongarch/: Cargo.toml
robustone-riscv/: Cargo.toml
robustone-x86/: Cargo.toml
robustone/examples/: debug_decode.rs  detailed_test.rs  test_decoder.rs
robustone/src/: error.rs  lib.rs  main.rs
robustone/src/cli/: arch.rs  command.rs  config.rs  disasm.rs  error.rs  executor.rs  mod.rs  tests.rs  version_info.rs
robustone/src/cli/utils/: check.rs  mod.rs  parse.rs
robustone/src/riscv/: printer.rs
robustone/src/transfer/: Cargo.toml
robustone/src/transfer/examples/: debug_decode.rs  detailed_test.rs  test_decoder.rs
robustone/src/transfer/src/: error.rs  instruction.rs  lib.rs
robustone/src/transfer/src/riscv/: decoder.rs  mod.rs  printer.rs  types.rs
robustone/src/transfer/src/riscv/src/: lib.rs  riscv.rs
robustone/tests/: json_output.rs
scripts/: analyze_loongarch_yaml.py  generate_loongarch_decoder.py  generate_loongarch_decoder.py.bak  generate_loongarch_decoder_v2.py  infer_formats.py  infer_formats2.py
test/: Makefile  README.md  __init__.py  build_cstool.sh  run_parity.py  run_tests.py  test_differential_surfaces.py  test_known_differences.py
transfer/: Cargo.toml
(+156 files in other folders)
