[package]
name = "robustone-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
robustone-core = { path = "../robustone-core" }
robustone-cli = { path = "../robustone-cli" }
clap = { version = "4.5.50", features = ["cargo", "derive"] }

[[bin]]
name = "decode_riscv"
path = "fuzz_targets/decode_riscv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_riscv_json"
path = "fuzz_targets/format_riscv_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hex_parser"
path = "fuzz_targets/hex_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_riscv_text"
path = "fuzz_targets/format_riscv_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli_argument_combinations"
path = "fuzz_targets/cli_argument_combinations.rs"
test = false
doc = false
bench = false
