[package]
name = "robustone-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
robustone-core = { path = "../robustone-core" }
robustone-riscv = { path = "../robustone-riscv" }
clap = { version = "4.5.50", features = ["cargo", "derive"] }
lazy_static = "1.4.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cli_end_to_end"
harness = false
