[package]
name = "robustone"
version = "0.0.0"
edition = "2024"

[dependencies]
robustone-core = { path = "../robustone-core" }
robustone-cli = { path = "../robustone-cli" }
robustone-riscv = { path = "../robustone-riscv" }
robustone-arm = { path = "../robustone-arm" }
robustone-x86 = { path = "../robustone-x86" }
robustone-loongarch = { path = "../robustone-loongarch" }

[dev-dependencies]
serde_json = "1.0"
